Applied the required changes

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHOGUM Meeting forum</title>
+    <title>CHOGM Meeting Rwanda</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
@@ -77,7 +77,7 @@
         </div>
     </div>
     <section id="second">
-        <h2>CHOGUM Rwanda 2022 Logo</h2>
+        <h2>CHOGM Rwanda 2022 Logo</h2>
         <div class="guide_bar"></div>
         <div class="intro-message">
             <p>The Commonwealth of Nations, simply referred to as the Commonwealth, is a political association of 56 member states, the vast 
@@ -88,7 +88,7 @@
         <div class="logo2"></div>
     </section>
     <section id="third">
-        <h2>CHOGUM Rwanda 2022 Logo</h2>
+        <h2>CHOGM Rwanda 2022 Logo</h2>
         <div class="guide_bar"></div>
         <div class="intro-message">
             <p>Take a look at the last two meeting</p>
