--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHOGUM Meeting forum</title>
+    <title>CHOGM Meeting Rwanda</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet">
@@ -65,9 +65,8 @@
                 <p class="hello">"Hello! sharing world"</p>
                 <h1 class="main-title">COMMONWEALTH HEADS OF GOVERNMENT MEETING 2022</h1>
                 <div class="intro-message">
-                    <p>A joyful celebration beleiving in the value of openness and sharing, creating
-                        a positive change with people from over 80 countries is taking place in Octover, Rwanda.
-                    </p>
+                    <p>A joyful celebration of the Commonwealth Heads Of Government Meeting (CHOGM) which will take place in 
+                        Rwanda.</p>
                 </div>
                 <div class="intro-message2">
                     <h2>2022.06.20(MON) ~ 25(FRI)</h2>
@@ -107,7 +106,7 @@
                 </div>
             </div>
             <p class="join1">SEE THE WHOLE PROGRAM</p>
-            <div class="join">Join CHOGUM Rwanda 2022</div>
+            <div class="join">Join CHOGM Rwanda 2022</div>
         </div>
     </section>
     <section id="speakers">
